--- a/src/app/formsanswered/formsanswered.component.html
+++ b/src/app/formsanswered/formsanswered.component.html
@@ -3,6 +3,9 @@
 
 
     <div class="container-fluid">
+        <button mat-mini-fab color="warn" (click)="onClose()" type="button" class="poll-remove-btn">
+            X
+        </button>
         <div class="row">
             <div class="col">
                 <div dir="rtl" class="card w-85-p">
