--- a/src/app/updatesingleform/updatesingleform.component.html
+++ b/src/app/updatesingleform/updatesingleform.component.html
@@ -338,6 +338,11 @@
       color="primary" type="submit" mat-raised-button>
       <span>שמירת טופס</span>
     </button>
+    <button class="mb-5" (click)="onClose()" style="font-weight: bold;font-size: 20px;color: white;float: left;"
+      color="warn" type="submit" mat-raised-button>
+      <span>יציאה ללא שמירה</span>
+    </button>
+   
   </div>
 
   <!-- <div class="button-row">
