--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -216,5 +216,11 @@
         <span>סיום ושמירת טופס</span>
       </button>
     </div>
+    <div class="button-row">
+      <button class="mb-5" style="font-weight: bold;font-size: 20px;color: white;float: left;" color="warn"
+        (click)="onClose()" type="submit" mat-raised-button>
+        <span>יציאה ללא שמירה</span>
+      </button>
+    </div>
   </form>
 </mat-card>
